# astra

./: .gitignore  LICENSE  package.json
.circleci/: config.yaml  config.yml
Toolbar/: Toolbar.html
astra/browser/: CMakeLists.txt
astra/browser/include/astra/: astra.h  base.h
astra/browser/source/: astra.cpp
astra/browser/source/toolbar/: index.js
astra/web/: package.json  playwright.config.ts  tailwind.config.ts
astra/web/src/app/: layout.tsx  page.tsx
astra/web/src/app/download/: page.tsx
astra/web/tests/: example.spec.ts  page.spec.ts
browser/: .gitmodules  LICENSE
browser/source/: astra.cpp  main.cpp
browser/source/toolbar/: index.js
docs/: next.config.js  package.json  tailwind.config.ts  theme.config.tsx  tsconfig.json
docs/src/pages/: _meta.json  architecture.mdx  deployment.mdx  licenses.mdx  product.mdx  roadmap.mdx  start-here.mdx  troubleshooting.mdx
docs/src/pages/community/: _meta.json  get-in-contact.mdx
docs/src/pages/installation/: _meta.json  installation.mdx  system-requirements.mdx
docs/src/pages/software-contributions/: _meta.json  code-conventions.mdx  git-conventions.mdx  naming-conventions.mdx
download-page/: package-lock.json  tailwind.config.ts  tsconfig.json
download-page/src/app/: layout.tsx
search-engine/: package.json  page.tsx  tailwind.config.ts
search-engine/app/: page.tsx
source/toolbar/: index.html
src/app/download/: page.tsx
